# tos-mcp

./: USAGE.md  mcp_config.json  pyproject.toml  readme.md  requirements.txt  run_server.py  setup.py  start_server.sh  test_image_info.py  tos_mcp_server.py
src/tos_mcp_server/: __init__.py  __main__.py  config.py  handlers.py  main.py  server.py
